# smart-sec

./: .gitignore  README.md
camera_app/: app.py  face_detect.py  mailing.py  requirements.txt  scanner.py
camera_app/frontend/: package-lock.json
camera_app/frontend/src/: App.jsx
camera_app/static/: style.css
camera_app/templates/: index.html
s3_camera/simple/main/: CMakeLists.txt  main.c  pages.h
s3_camera/simple_tocopy/: CMakeLists.txt
s3_camera/simple_tocopy/main/: CMakeLists.txt  main.c  pages.c
